Sync master with midpoint master